--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         Github Repository
                     </a>
                     |
-                    <a href="#" target="_blank">Personal Website</a> |
+                    <a href="#" target="_blank">Mattgrah.am</a> |
                     <a href="#" target="_blank">Twitter</a>
                 </p>
             </footer>
