--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Tic Tac Toe</title>
-        <link rel="stylesheet" href="./style.css" />
+        <link rel="stylesheet" href="./css/style.css" />
     </head>
     <body>
         <div class="container">
@@ -14,15 +14,15 @@
             </header>
             <main>
                 <section class="play_window">
-                    <div id="block_1">1</div>
-                    <div id="block_2">2</div>
-                    <div id="block_3">3</div>
-                    <div id="block_4">4</div>
-                    <div id="block_5">5</div>
-                    <div id="block_6">6</div>
-                    <div id="block_7">7</div>
-                    <div id="block_8">8</div>
-                    <div id="block_9">9</div>
+                    <div id="block_1"></div>
+                    <div id="block_2"></div>
+                    <div id="block_3"></div>
+                    <div id="block_4"></div>
+                    <div id="block_5"></div>
+                    <div id="block_6"></div>
+                    <div id="block_7"></div>
+                    <div id="block_8"></div>
+                    <div id="block_9"></div>
                 </section>
                 <section class="status_bar">
                     <p class="status">Player 1's Turn</p>
@@ -46,6 +46,6 @@
                 </p>
             </footer>
         </div>
-        <script src="./main.js"></script>
+        <script src="./js/main.js"></script>
     </body>
 </html>
