refactor win condition

--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
             </header>
             <main>
                 <section class="play_window">
-                    <div id="block_1">1</div>
-                    <div id="block_2">2</div>
-                    <div id="block_3">3</div>
-                    <div id="block_4">4</div>
-                    <div id="block_5">5</div>
-                    <div id="block_6">6</div>
-                    <div id="block_7">7</div>
-                    <div id="block_8">8</div>
-                    <div id="block_9">9</div>
+                    <div id="block_1"></div>
+                    <div id="block_2"></div>
+                    <div id="block_3"></div>
+                    <div id="block_4"></div>
+                    <div id="block_5"></div>
+                    <div id="block_6"></div>
+                    <div id="block_7"></div>
+                    <div id="block_8"></div>
+                    <div id="block_9"></div>
                 </section>
                 <section class="status_bar">
                     <p class="status">Begin Game</p>
