--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Tic Tac Toe</title>
         <link rel="stylesheet" href="./css/style.css" />
+        <link href="./assets/favicon.ico" rel="icon" type="image/x-icon" />
     </head>
     <body>
         <div class="container">
