refactoring code for click function and removed redundtant css

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                 </section>
             </main>
             <aside>
-                <h2 class="p1">Player 1: <span class="score" id="player1_score">0</span></h2>
-                <h2 class="p2">Player 2: <span class="score" id="player2_score">0</span></h2>
+                <h2 class="player1">Player 1: <span class="score" id="player1_score">0</span></h2>
+                <h2 class="player2">Player 2: <span class="score" id="player2_score">0</span></h2>
             </aside>
             <div class="window"></div>
             <footer>
