--- a/index.html
+++ b/index.html
@@ -27,15 +27,21 @@
                 </section>
                 <section class="status_bar">
                     <p class="status">Begin Game</p>
-                    <button class="btn" id="play_again">Play again</button>
-                    <button class="btn" id="reset">Reset Scores</button>
+                    <img src="./assets/winner.gif" alt="Ed shooting a confetti gun" class="win" />
                 </section>
             </main>
-            <aside>
-                <h2 class="player1">Player 1: <span class="score" id="player1_score">0</span></h2>
-                <h2 class="player2">Player 2: <span class="score" id="player2_score">0</span></h2>
+            <aside class="left">
+                <h2 class="player1" id="p1">
+                    Player 1<span class="score" id="player1_score">0</span>
+                </h2>
             </aside>
-            <div class="window"></div>
+            <aside class="right">
+                <h2 class="player2" id="p2">
+                    <span class="score" id="player2_score">0</span>Player 2
+                </h2>
+                <button class="btn" id="play_again">Play again</button>
+                <button class="btn" id="reset">Reset Scores</button>
+            </aside>
             <footer>
                 <p>
                     <a href="https://github.com/mattgrah-am/tictactoe" target="_blank">
