change theme, add logo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <div class="container">
             <header>
-                <h1>TIC TAC TOE</h1>
+                <img src="./assets/logo.png" alt="Tic Tac Toe" />
             </header>
             <main>
                 <section class="play_window">
@@ -26,7 +26,7 @@
                     <div id="block_9"></div>
                 </section>
                 <section class="status_bar">
-                    <p class="status">Begin Game</p>
+                    <p class="status">BEGIN GAME</p>
                     <img src="./assets/winner.gif" alt="Ed shooting a confetti gun" class="win" />
                 </section>
             </main>
@@ -39,8 +39,8 @@
                 <h2 class="player2" id="p2">
                     <span class="score" id="player2_score">0</span>Player 2
                 </h2>
-                <button class="btn" id="play_again">Play again</button>
-                <button class="btn" id="reset">Reset Scores</button>
+                <button class="btn" id="play_again">PLAY AGAIN</button>
+                <button class="btn" id="reset">RESET SCORES</button>
             </aside>
             <footer>
                 <p>
