add player indicator

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <div id="block_9"></div>
                 </section>
                 <section class="status_bar">
-                    <p class="status">BEGIN GAME</p>
+                    <p class="status"></p>
                     <img src="./assets/winner.gif" alt="Ed shooting a confetti gun" class="win" />
                 </section>
             </main>
@@ -34,11 +34,17 @@
                 <h2 class="player1" id="p1">
                     Player 1<span class="score" id="player1_score">0</span>
                 </h2>
+                <div class="indicator">
+                    <img src="./assets/invader.png" alt="Invader" id="invader" />
+                </div>
             </aside>
             <aside class="right">
                 <h2 class="player2" id="p2">
                     <span class="score" id="player2_score">0</span>Player 2
                 </h2>
+                <div class="indicator">
+                    <img src="./assets/robot.png" alt="Robot" id="robot" class="hide" />
+                </div>
                 <button class="btn" id="play_again">PLAY AGAIN</button>
                 <button class="btn" id="reset">RESET SCORES</button>
             </aside>
@@ -49,7 +55,7 @@
                     </a>
                     |
                     <a href="#" target="_blank">Mattgrah.am</a> |
-                    <a href="#" target="_blank">Twitter</a>
+                    <a href="#" target="_blank">Follow on Twitter</a>
                 </p>
             </footer>
         </div>
