mobile friendly... sort of.

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                         Github Repository
                     </a>
                     |
-                    <a href="#" target="_blank">Mattgrah.am</a> |
-                    <a href="#" target="_blank">Follow on Twitter</a>
+                    <a href="https://www.mattgrah.am/" target="_blank">Mattgrah.am</a> |
+                    <a href="https://twitter.com/mattgrah_am" target="_blank">Follow on Twitter</a>
                 </p>
             </footer>
         </div>
