fix scores to persist through refresh

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </main>
             <aside class="left">
                 <h2 class="player1" id="p1">
-                    Player 1<span class="score" id="player1_score"></span>
+                    Player 1<span class="score" id="player1_score">0</span>
                 </h2>
                 <div class="indicator">
                     <img src="./assets/invader.png" alt="Invader" id="invader" />
@@ -41,7 +41,7 @@
             </aside>
             <aside class="right">
                 <h2 class="player2" id="p2">
-                    <span class="score" id="player2_score"></span>Player 2
+                    <span class="score" id="player2_score">0</span>Player 2
                 </h2>
                 <div class="indicator">
                     <img src="./assets/robot.png" alt="Robot" id="robot" class="hide" />
