--- a/index.html
+++ b/index.html
@@ -51,12 +51,7 @@
             </aside>
             <footer>
                 <p>
-                    <a href="https://github.com/mattgrah-am/tictactoe" target="_blank">
-                        Github Repository
-                    </a>
-                    |
-                    <a href="https://www.mattgrah.am/" target="_blank">Mattgrah.am</a> |
-                    <a href="https://twitter.com/mattgrah_am" target="_blank">Follow on Twitter</a>
+                    Created with 🖤 by <a href="https://www.matg.dev/" target="_blank">Matt</a>
                 </p>
             </footer>
         </div>
