--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </aside>
             <footer>
                 <p>
-                    Created with 🖤 by <a href="https://www.matg.dev/" target="_blank">Matt</a>
+                    Created with 🖤 by <a href="https://www.matg.dev/" target="_blank">matg.dev</a>
                 </p>
             </footer>
         </div>
